# Label-Auto-Reformat-Printing

./: .gitignore  CHANGELOG.md  EXE打包完整指南.md  EXE打包教程.md  PDF预览功能打包指南.md  README.md  __version__.py  convert_icon.py  label_gui_qt.py  label_printer.spec  language_config.json  pyproject.toml  requirements.txt  settings.json  打包优化方案.md  标签打印工具.spec
.github/workflows/: build-release.yml
config/: __init__.py  settings.py  settings_service.py
docs/: web_service_migration.md
i18n/: __init__.py  languages.py
services/: __init__.py  pdf_service.py
ui/: __init__.py  control_panel.py  main_window.py  preview_panel.py  styles.py
widgets/: __init__.py  effects.py  labels.py  loading.py
