[tool.poetry]
name = "label"
version = "1.2.4"
description = "标签批量打印排版工具 | Label Batch Printing Tool"
authors = ["CW"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
pyqt6 = ">=6.10.1,<7.0.0"
pillow = ">=12.0.0,<13.0.0"
reportlab = ">=4.4.5,<5.0.0"
pymupdf = ">=1.26.6,<2.0.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"